dnl configure.in for mawk
dnl
dnl $Log: configure.in,v $
dnl Revision 1.13  1995/10/16  12:25:00  mike
dnl configure cleanup
dnl
dnl Revision 1.12  1995/04/20  20:26:51  mike
dnl beta improvements from Carl Mascott
dnl
dnl Revision 1.11  1995/01/09  01:22:30  mike
dnl check sig handler ret type to make fpe_check.c more robust
dnl
dnl Revision 1.10  1994/12/18  20:46:24  mike
dnl fpe_check -> ./fpe_check
dnl
dnl Revision 1.9  1994/12/14  14:42:55  mike
dnl more explicit that "   " MATHLIB means none
dnl
dnl Revision 1.8  1994/12/11  21:26:25  mike
dnl tweak egrep for [fs]printf prototypes
dnl
dnl Revision 1.7  1994/10/16  18:38:23  mike
dnl use sed on defines.out
dnl
dnl Revision 1.6  1994/10/11  02:49:06  mike
dnl systemVr4 siginfo
dnl
dnl Revision 1.5  1994/10/11  00:39:25  mike
dnl fpe check stuff
dnl
dnl
dnl
AC_INIT(mawk.h)
builtin(include,mawk.ac.m4)
GET_USER_DEFAULTS
PROG_CC_NO_MINUS_G_NONSENSE
AC_PROG_CPP
NOTSET_THEN_DEFAULT(CFLAGS,-O)
LOOK_FOR_MATH_LIBRARY
WHICH_YACC
COMPILER_ATTRIBUTES
WHERE_SIZE_T
CHECK_HEADERS(fcntl.h,errno.h, time.h,stdarg.h)
CHECK_FUNCTIONS(memcpy,strchr,strerror,vfprintf,strtod,fmod,matherr)
FPRINTF_IN_STDIO
FIND_OR_COMPUTE_MAX__INT
DREADED_FPE_TESTS
DO_CONFIG_H
AC_OUTPUT(Makefile)
